--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 API_KEY=8d33bc0f-f0b1
 API_TOKEN=WrZxf40Y3lEvBB2t3J6bVs
+
+# const api_key = process.env.API_KEY;
+# const api_token = process.env.API_TOKEN;
